--- a/styles.css
+++ b/styles.css
@@ -551,7 +551,7 @@ margin: 1rem 0;
         - add the puppy-photo as a repeating background to the container
 */
 #bg-img-3{
-    background-color: var(--lt-blue) center url("images/puppy-photo.jpg");
+    background: var(--lt-blue) center url("images/puppy-photo.jpg");
 
     
 }
@@ -580,7 +580,7 @@ margin: 1rem 0;
         - add the wood background texture from the images folder
 */
 #pattern1{
-    background-color: var(--light-gray)110% url("images/wood.png");
+    background: var(--light-gray) 110% url("images/wood.png");
 }
 
 /* For the second div, the pattern is from from Hero Pattern. These actually give you SVG code to paste into your CSS */
